schema/testdata/errors/action_types.keel
model Person {
    fields {
        name Text
    }

    actions {
        //expect-error:9:12:TypeError:foo is not a valid action type. Valid types are get, create, update, list, or delete
        foo something()
    }
}
